--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     },
     "homepage": "https://github.com/balancer-labs/balancer-core#readme",
     "devDependencies": {
-        "@truffle/hdwallet-provider": "1.2.2",
         "chai": "^4.2.0",
         "coveralls": "^3.0.8",
         "eslint": "^6.7.1",
@@ -40,6 +39,8 @@
         "web3": "^1.2.0"
     },
     "dependencies": {
+        "dotenv": "^9.0.2",
+        "@truffle/hdwallet-provider": "1.2.2",
         "decimal.js": "^10.2.0",
         "ganache-cli": "^6.7.0",
         "global": "^4.4.0"
